<<<<<<< HEAD
<<<<<<< HEAD
[gd_scene load_steps=17 format=2]
=======
[gd_scene load_steps=20 format=2]
>>>>>>> parent of 73f96bb (fin semana 4)
=======
[gd_scene load_steps=20 format=2]
>>>>>>> parent of 73f96bb (fin semana 4)

[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/Spritebase3.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/Spritebase2.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/Spritebase5.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/Spritebase1.png" type="Texture" id=4]
[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/Spritebase4.png" type="Texture" id=5]
[ext_resource path="res://Juego/Naves/Estacion/AreaAtraccion.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/BaseEnemiga.gd" type="Script" id=7]
[ext_resource path="res://Juego/Meteoritos/impacto_sfx.ogg" type="AudioStream" id=8]
[ext_resource path="res://Juego/Enemigo Dumy/AreaColision.gd" type="Script" id=9]
<<<<<<< HEAD
=======
[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/PosicionesSpawn.gd" type="Script" id=10]
[ext_resource path="res://Juego/Naves/Enemigos/Base Enemiga/RutaEnemigo.gd" type="Script" id=11]
<<<<<<< HEAD
>>>>>>> parent of 73f96bb (fin semana 4)
=======
>>>>>>> parent of 73f96bb (fin semana 4)

[sub_resource type="CapsuleShape2D" id=1]
radius = 50.9028
height = 247.599

[sub_resource type="CapsuleShape2D" id=2]
radius = 36.2195
height = 72.0813

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.5372
height = 106.787

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Movimiento_pendulo"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.6, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 290, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.6, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 290, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaColision:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaAtraccion:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.6, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 290, 0 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.760784, 0.737255, 0.129412, 0.145098 ) ]
}

[sub_resource type="Animation" id=6]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.760784, 0.737255, 0.129412, 0.145098 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaColision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=7]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.760784, 0.737255, 0.129412, 0.145098 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaColision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="BaseEnemiga" type="Node2D"]
z_index = 41
script = ExtResource( 7 )
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> parent of 73f96bb (fin semana 4)
intervalo_spawn = 1.5
>>>>>>> parent of 73f96bb (fin semana 4)

[node name="Sprites" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Spritebase2" type="Sprite" parent="Sprites"]
position = Vector2( 118.354, 43.38 )
texture = ExtResource( 2 )

[node name="Spritebase5" type="Sprite" parent="Sprites"]
position = Vector2( 20.9542, 44.7072 )
rotation = 3.14159
texture = ExtResource( 3 )

[node name="Spritebase4" type="Sprite" parent="Sprites"]
texture = ExtResource( 5 )

[node name="Spritebase3" type="Sprite" parent="Sprites"]
position = Vector2( 0, 173.5 )
texture = ExtResource( 1 )

[node name="Spritebase1" type="Sprite" parent="Sprites"]
position = Vector2( 58.2777, 43.8222 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 34
collision_mask = 9
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 90.7691, 40.0452 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, 173.5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="AreaAtraccion" index="0"]
visible = false

[node name="SpriteZonaRecarga" parent="AreaAtraccion" index="1"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 4 )
anims/Movimiento_pendulo = SubResource( 5 )
anims/rotacion_antihorario = SubResource( 6 )
anims/rotacion_horario = SubResource( 7 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]

[editable path="AreaAtraccion"]
